--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@ $black: #000000;
 
 $primary: #e69a8dff;
 $secondary: #2f89fc;
-$tertiary: #08c299;
+$tertiary: #5f4b8bff;
 
 @mixin gradient-background() {
     background: rgba(8, 194, 154, 1);
